fix: icon rescalling out of container size

--- a/app/style/TechnoIcon.css
+++ b/app/style/TechnoIcon.css
@@ -4,7 +4,7 @@
   min-width: 60px;
 }
 .technos-container.animate:hover i::before {
-  font-size: var(--p-font-size);
+  font-size: 2.5rem;
   transition: font-size 0.1s ease-in-out;
 }
 .technos-container i::before {
@@ -14,9 +14,8 @@
   font-size: 1.5rem;
 }
 .technos-container i {
-  font-size: 2rem;
   margin: 0 auto;
   width: fit-content;
   display: flex;
-  height: 2rem;
+  height: 2.5rem;
 }
